# boon-ai-hackathon-apr-10

./: .env.example  .gitignore  README.md  boon_hackathon_presentation.md  convert_to_tms.py  customer_id_mapping.json  evaluate_extraction.py  evaluate_llm_conversion.py  evaluate_tms_conversion.py  extract_markdown.py  extraction_project_documentation.md  ideal_solution_architecture.md  llm_conversion_analysis_report.md  llm_convert_to_tms.py  llm_tms_evaluation_report.md  parallel_llm_convert.py  part_1_plan.md  part_2_plan.md  pyproject.toml  requirements.txt  test_extraction.py  tms_conversion_analysis.md  tms_evaluation_report.md  tms_field_mapping.md
combined_evaluation_results/: detailed_accuracy.csv  evaluation_summary.md  field_performance.csv
combined_extraction_results/: 0100767_extraction.json  0148909_extraction.json  0245658_extraction.json  1183886_extraction.json  1353403_extraction.json  14342080_extraction.json  14342084_extraction.json  14446278_extraction.json  14530945_extraction.json  1931823_extraction.json  2001073484_extraction.json  2001809674_extraction.json  2001824215_extraction.json  2001828290_extraction.json  2001836741_extraction.json  2001868099_extraction.json  2145346_extraction.json  2365675_extraction.json  3068411_extraction.json  3068716_extraction.json  3070046_extraction.json  3070085_extraction.json  3071603_extraction.json  3071726_extraction.json  3072177_extraction.json  31421-79757_extraction.json  31440-90145_extraction.json  31483-42812_extraction.json  32617822_extraction.json  32688939_extraction.json  (+53 more)
src/: test.py
(+172 files in other folders)
