[tool.poetry]
name = "boon-ai-hackathon-apr-10"
version = "0.1.0"
description = ""
authors = ["Sreenidhi Iyengar Muniamdugu <55671332+sree369nidhi@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
openai = ">=1.72.0,<2.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
pypdf2 = ">=3.0.1,<4.0.0"
pdfminer-six = ">=20250327,<20250328"
spacy = {version = ">=3.8.5,<4.0.0", python = ">=3.10,<3.13"}
fuzzywuzzy = ">=0.18.0,<0.19.0"
python-levenshtein = ">=0.27.1,<0.28.0"
pandas = ">=2.2.3,<3.0.0"
networkx = ">=3.4.2,<4.0.0"
scikit-learn = ">=1.6.1,<2.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
